--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 20px;
     line-height: 1;
   }
-  
+  /*kjflkjlkjflk*/
   textarea{
     background: transparent;
     border: none;
